--- a/style.css
+++ b/style.css
@@ -669,6 +669,96 @@ padding-bottom: 0px;
 
 
 
+.main-container {
+  display: flex;
+  width: 100%;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.left-section,
+.right-section {
+  width: 50%;
+}
+@media (max-width: 800px) {
+  .left-section,
+  .right-section {
+      width: 100%;
+  }
+}
+.owl-carousel .item img {
+  border-radius: 25px;
+  width: 100%;
+  max-width: 450px;
+  height: 350px;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto; /* Center the images */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
