--- a/styl.css
+++ b/styl.css
@@ -1,12 +1,10 @@
 body {
-  font-family: 'Manrope', sans-serif;  
-  color: black;
-
-    font-weight: 500;
-font-size: 15px;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: Arial, Helvetica, sans-serif !important;
+  color: black !important;
+  line-height: 1.5 !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  margin: 0 !important;}
 
   * {
     margin: 0;
@@ -15,105 +13,183 @@ font-size: 15px;
 
   
 
-  .navbar img {
-      padding-left: 10px;
-      max-width: 220px;
-      height: 120px;
-    }
+
   
-    .nav-list {
-      z-index: 999;
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 10px;
-    }
-  
-    .nav-list li {
-      z-index: 999;
-      margin-right: 10px;
-    }
-  
-    .nav-list a {
-      z-index: 999;
-      color: black;
-      font-style: bold;
-      text-decoration: none;
-      padding: 10px;
-      display: block;
-      transition: background-color 0.3s ease;
-    }
-  
-    .nav-list a:hover {
-      background-color: #D6A295;
-    }
-  
-    .menu-button {
-      display: none;
-      font-size: 35px;
-      color: #Ab5943; /* Font color black */
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-  
-    .dropdown-content {
-      width: 200px;
-      display: none;
-      position: absolute;
-      right: 10px;
-      top: 30px;
-      background-color: white;
-      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-  
-    .dropdown-content a {
-        z-index: 3;
-      color: black; 
-      padding: 10px 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-  
-    .dropdown-content a:hover {
-      background-color: #D6A295;
-    }
-  
-    /* Responsive styles */
-    @media (max-width: 800px) {
-      .nav-list {
-        z-index: 999;
-        display: none;
-      }
-      .menu-button {
-        display: block;
-      }
-    }
-  
-    @media (max-width: 800px), (hover: none) {
-      .dropdown-content.show {
-        display: block;
-      }
-    }
-  
-  
-  
-  
-  .navbar {
+  .elephant-nav-list a {
+    text-decoration: none;
+    color: #000;
+    position: relative; /* Added position relative for hover effect */
+  }
+
+  .elephant-nav-list a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
+    background-color: #Ab5943;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .elephant-nav-list a:hover::after {
+    visibility: visible;
+    transform: scaleX(1);
+  }
+
+  /* Add right spacing of 25px to the dropdown content */
+  .elephant-menu-content {
+    right: 25px;
+  }
+
+  .elephant-navbar {
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 35px;
+    padding-left: 20px;
+    background-color: #fff;
+  }
+  .elephant-nav-list {
+    z-index: 999;
+    list-style: none;
+    display: flex;
+    gap: 30px;
+    padding: 0;
+    margin: 0;
+  }
+  .elephant-nav-list li {
+    display: inline;
+  }
+  .elephant-nav-list a {
+    text-decoration: none;
+    color: #000;
+    line-height: 20px;
+    position: relative; /* Added position relative for hover effect */
+  }
+  .elephant-nav-list a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
+    background-color: #Ab5943;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+  }
+  .elephant-nav-list a:hover::after {
+    visibility: visible;
+    transform: scaleX(1);
+  }
+  .elephant-dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .elephant-dropdown-content {
+    width: 200px;
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 17px;
+    background-color: white;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
-      
-      font-family: 'Manrope', sans-serif;
-      font-size: 16px;
-      font-weight: 500;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: white;
-      padding-left: 25px;
-            padding-right: 25px;
+  }
+  .elephant-dropdown-content a {
+    z-index: 3;
+    color: black;
+    padding: 10px 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .elephant-dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+  .elephant-dropdown:hover .elephant-dropdown-content {
+    display: block;
+  }
+  .elephant-menu-button {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 35px;
+    color: #Ab5943;
+    cursor: pointer;
+  }
+  @media (max-width: 800px) {
+    .elephant-nav-list {
+      z-index: 999;
+      display: none;
+      flex-direction: column;
+      width: auto;
+      position: absolute;
+      top: 60px; /* Adjust according to your navbar height */
+      right: 0;
+      background-color: #fff;
+      box-shadow: 0 8px 16px rgba(54, 36, 36, 0.2);
+      height: auto;
     }
-  
+    .elephant-nav-list.show {
+      display: flex;
+    }
+    .elephant-menu-button {
+      display: block;
+    }
+  }
+  .elephant-navbar img {
+    max-width: 250px;
+    max-height: 150px;
+  }
+  .elephant-dropdown:hover .elephant-dropdown-content {
+    display: block;
+  }
+  .elephant-dropdown:hover .elephant-dropbtn {
+    background-color: white;
+  }
+  .elephant-dropbtn {
+    background-color: white;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  .elephant-dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .elephant-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  .elephant-dropdown-content a {
+    color: black;
+    z-index: 999;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .elephant-dropdown-content a:hover {
+    background-color: #AB5943;
+  }
+  .elephant-dropdown:hover .elephant-dropdown-content {
+    display: block;
+  }
+  .elephant-dropdown:hover .elephant-dropbtn {
+    background-color: white;
+  }
+  /* Add right spacing of 25px to the dropdown content */
+  .elephant-menu-content {
+    right: 25px;
+  }
 
 
 
@@ -131,20 +207,20 @@ font-size: 15px;
 .image-container img {
   opacity: 0.6;
   z-index: 0;
-  max-height: 400px;
+  max-height: 250px;
   position: relative;
 }
 
 .caption {
+  font-weight: 800;
   position: absolute;
- bottom: 200px; /* Adjust as needed */
+ bottom: 50%; /* Adjust as needed */
   left: 20px; /* Adjust as needed */
   z-index: 3;
   font-weight: bolder;
-  font-size: 35px;
-  font-weight: bold; /* Optional: make the text bold */
+  font-size: 25px; /* Optional: make the text bold */
   color: black;
-  padding: 10px;
+  padding-left: 30px;
   border-radius: 5px;
   text-underline-offset: 25px;
   text-decoration: underline;
@@ -154,8 +230,133 @@ font-size: 15px;
 
 @media (max-width: 800px) {
   .caption {
+    bottom: 50%;
       font-size: 25px;
       text-underline-offset: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
+#koko { font-weight: 900;}
+
+
+
+.dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  }
+  
+  .dropdown {
+  position: relative;
+  display: inline-block;
+  }
+  
+  .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  }
+  
+  .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #AB5943}
+  
+  .dropdown:hover .dropdown-content {
+  display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+  background-color: white;
+  }
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+#animated-text {
+
+  font-size: 25px;
+  font-weight: 800;
+}
+
+
+@media (max-width: 800px) {
+  #animated-text {
+      font-size: 25px;
+  }
+}
+
+
+
+.para {
+  text-align: justify;
+  font-size: 15px;
+  line-height: 1.5; 
+}
+
+
+
+
+
+
+.flex-container {
+  padding-top: 35px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-item {
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.goat {
+  background-color: white;
+  flex: 0 0 65%;
+}
+
+.cat {
+  background-color: #D6A295;
+  flex: 0 0 35%;
+}
+
+@media (max-width: 800px) {
+  .flex-item {
+      flex: 0 0 100%;
+      margin-bottom: 30px;
+  }
+  
+  .flex-item:last-child {
+      margin-bottom: 0;
   }
 }
 
@@ -171,42 +372,78 @@ font-size: 15px;
 
 
 
-.dropbtn {
-background-color: white;
-color: black;
-padding: 16px;
-font-size: 16px;
-border: none;
-cursor: pointer;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.button {
+  background-color: #D6A295;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-.dropdown {
-position: relative;
-display: inline-block;
+.modal {
+
+  display: none;
+  position: fixed; /* Change from 'absolute' to 'fixed' */
+  z-index: 9999; /* Set a high z-index to ensure it's on top of everything */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.dropdown-content {
-display: none;
-position: absolute;
-background-color: #f9f9f9;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-z-index: 1;
+.modal-content {
+  text-align: justify;
+  z-index: 999;
+  background-color: #fefefe;
+  margin: 10%;
+  padding: 25px;
+  border: 1px solid #Ab5943;
+  width: 70%;
+  height: auto;
+  border-radius: 10px;
+  position: relative;
 }
 
-.dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+.close {
+  color: #Ab5943;
+  float: right;
+  font-size: 58px;
+  font-weight: bold;
 }
 
-.dropdown-content a:hover {background-color: #AB5943}
-
-.dropdown:hover .dropdown-content {
-display: block;
+.close:hover,
+.close:focus {
+  color: RED;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-.dropdown:hover .dropbtn {
-background-color: white;
+.modal-body {
+  margin-left: 20px;
+  margin-top: 10px;
 }
