--- a/styl.css
+++ b/styl.css
@@ -14,13 +14,21 @@ body {
   
 
 
+
   
+
+
+/* navbar and footer styling begina here */
+
+
+
+
   .elephant-nav-list a {
     text-decoration: none;
     color: #000;
     position: relative; /* Added position relative for hover effect */
   }
-
+  
   .elephant-nav-list a::after {
     content: '';
     position: absolute;
@@ -33,24 +41,25 @@ body {
     transform: scaleX(0);
     transition: all 0.3s ease-in-out;
   }
-
+  
   .elephant-nav-list a:hover::after {
     visibility: visible;
     transform: scaleX(1);
   }
-
+  
   /* Add right spacing of 25px to the dropdown content */
-  .elephant-menu-content {
-    right: 25px;
-  }
-
+  
+  
+  
+  
+  
   .elephant-navbar {
     z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-right: 35px;
-    padding-left: 20px;
+    padding-right: 25px;
+    padding-left: 10px;
     background-color: #fff;
   }
   .elephant-nav-list {
@@ -68,7 +77,7 @@ body {
     text-decoration: none;
     color: #000;
     line-height: 20px;
-    position: relative; /* Added position relative for hover effect */
+    position: relative; 
   }
   .elephant-nav-list a::after {
     content: '';
@@ -113,6 +122,15 @@ body {
   .elephant-dropdown:hover .elephant-dropdown-content {
     display: block;
   }
+  
+  @media screen and (max-width: 800px) {
+   .elephant-menu-button {
+    
+      padding-right:0px;
+     }
+  }
+  
+  
   .elephant-menu-button {
     display: none;
     background: none;
@@ -139,11 +157,12 @@ body {
     }
     .elephant-menu-button {
       display: block;
+      padding-right: 0px;
     }
   }
   .elephant-navbar img {
-    max-width: 250px;
-    max-height: 150px;
+    max-width: 220px;
+    max-height: 130px;
   }
   .elephant-dropdown:hover .elephant-dropdown-content {
     display: block;
@@ -190,6 +209,166 @@ body {
   .elephant-menu-content {
     right: 25px;
   }
+  
+  
+  
+  
+  @media screen and (max-width: 800px) {
+    .elephant-navbar img {
+      max-width: 175px;
+      padding: 0px;
+      padding-left: 0px;
+      margin: 0px;
+      max-height: 115px;
+    }
+  }
+
+  
+
+@media (max-width: 800px) {
+  .new-flex-container {
+    flex-direction: column;
+  }
+  }
+  
+  
+  .new-custom-container {
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  height: 100%; 
+  }
+  
+  .new-container-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #B8705D;
+  z-index: 1;
+  }
+  
+  
+  
+  .new-flex-container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  }
+  
+  
+  
+
+  .custom-list {
+    color: black;
+              list-style-type: none; 
+              padding: 0; 
+          }
+    
+          .custom-list li {
+              padding-top: 19px;
+          }
+    .custom-list li a {
+              text-decoration: none;
+              font-size: large; 
+              color: black;
+              transition: color 0.3s ease;
+          }
+    
+          .custom-list li a:hover {
+            color: gold; /* color on hover */
+        }
+    
+    
+  
+.w3-third { text-align: center;
+  font-style: bold;}
+
+
+  @media (max-width: 800px) {
+    .flex-container {
+      justify-content: center; 
+    }
+    }
+    
+  
+  
+  @media (max-width: 800px) {
+  .new-flex-container {
+    flex-direction: column;
+  }
+  }
+  
+  
+
+/* styling for navbar and footer ends here */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -245,50 +424,6 @@ body {
 
 
 #koko { font-weight: 900;}
-
-
-
-.dropbtn {
-  background-color: white;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  }
-  
-  .dropdown {
-  position: relative;
-  display: inline-block;
-  }
-  
-  .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  }
-  
-  .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #AB5943}
-  
-  .dropdown:hover .dropdown-content {
-  display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-  background-color: white;
-  }
-  
-  
 
 
 
@@ -367,83 +502,3 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.button {
-  background-color: #D6A295;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 15px;
-  border-radius: 20px;
-  cursor: pointer;
-}
-
-.modal {
-
-  display: none;
-  position: fixed; /* Change from 'absolute' to 'fixed' */
-  z-index: 9999; /* Set a high z-index to ensure it's on top of everything */
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-  text-align: justify;
-  z-index: 999;
-  background-color: #fefefe;
-  margin: 10%;
-  padding: 25px;
-  border: 1px solid #Ab5943;
-  width: 70%;
-  height: auto;
-  border-radius: 10px;
-  position: relative;
-}
-
-.close {
-  color: #Ab5943;
-  float: right;
-  font-size: 58px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: RED;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-body {
-  margin-left: 20px;
-  margin-top: 10px;
-}
