--- a/styles.css
+++ b/styles.css
@@ -100,194 +100,6 @@ body {
   
 
 
-.elephant-nav-list a {
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  position: relative; /* Added position relative for hover effect */
-}
-
-.elephant-nav-list a::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -2px;
-  left: 0;
-  background-color: #Ab5943;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
-}
-
-.elephant-nav-list a:hover::after {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
-/* Add right spacing of 25px to the dropdown content */
-.elephant-menu-content {
-  right: 25px;
-}
-
-.elephant-navbar {
-  z-index: 999;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-right: 35px;
-  padding-left: 20px;
-  background-color: #fff;
-}
-.elephant-nav-list {
-  z-index: 999;
-  list-style: none;
-  display: flex;
-  gap: 30px;
-  padding: 0;
-  margin: 0;
-}
-.elephant-nav-list li {
-  display: inline;
-}
-.elephant-nav-list a {
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  line-height: 20px;
-  position: relative; /* Added position relative for hover effect */
-}
-.elephant-nav-list a::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -2px;
-  left: 0;
-  background-color: #Ab5943;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
-}
-.elephant-nav-list a:hover::after {
-  visibility: visible;
-  transform: scaleX(1);
-}
-.elephant-dropdown {
-  position: relative;
-  display: inline-block;
-}
-.elephant-dropdown-content {
-  width: 200px;
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 17px;
-  background-color: white;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-.elephant-dropdown-content a {
-  z-index: 3;
-  color: black;
-  padding: 10px 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-.elephant-dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-.elephant-dropdown:hover .elephant-dropdown-content {
-  display: block;
-}
-.elephant-menu-button {
-  display: none;
-  background: none;
-  border: none;
-  font-size: 35px;
-  color: #Ab5943;
-  cursor: pointer;
-}
-@media (max-width: 800px) {
-  .elephant-nav-list {
-    z-index: 999;
-    display: none;
-    flex-direction: column;
-    width: auto;
-    position: absolute;
-    top: 60px; /* Adjust according to your navbar height */
-    right: 0;
-    background-color: #fff;
-    box-shadow: 0 8px 16px rgba(54, 36, 36, 0.2);
-    height: auto;
-  }
-  .elephant-nav-list.show {
-    display: flex;
-  }
-  .elephant-menu-button {
-    display: block;
-  }
-}
-.elephant-navbar img {
-  max-width: 250px;
-  max-height: 150px;
-}
-.elephant-dropdown:hover .elephant-dropdown-content {
-  display: block;
-}
-.elephant-dropdown:hover .elephant-dropbtn {
-  background-color: white;
-}
-.elephant-dropbtn {
-  background-color: white;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-.elephant-dropdown {
-  position: relative;
-  display: inline-block;
-}
-.elephant-dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.elephant-dropdown-content a {
-  color: black;
-  z-index: 999;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-.elephant-dropdown-content a:hover {
-  background-color: #AB5943;
-}
-.elephant-dropdown:hover .elephant-dropdown-content {
-  display: block;
-}
-.elephant-dropdown:hover .elephant-dropbtn {
-  background-color: white;
-}
-/* Add right spacing of 25px to the dropdown content */
-.elephant-menu-content {
-  right: 25px;
-}
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
     .eze {
       position: relative;
@@ -578,6 +390,8 @@ body {
   
   
   
+
+ 
   
   
   
@@ -586,39 +400,113 @@ body {
   
   
   
-    
-  @media (max-width: 800px) {
-    .new-flex-container {
-      flex-direction: column;
-    }
+  
+  
+  
+  
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
+.custom-container {
+  box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
+  
+  z-index: 0;
+    position: relative;
+    overflow: hidden; 
+    background-image: url('https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/media/images/manatee-yumyum.gif'); 
+    background-size: cover; 
+    border-top: 35px; 
   }
   
+  .container-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #D6A295;
+  opacity: 0.5;
+  }
+  
+
+
+
+
+@media (max-width: 800px) {
+  .new-flex-container {
+    flex-direction: column;
+  }
+  }
+  @media (max-width: 800px) {
+    .flex-container {
+      justify-content: center; 
+    }
+    }
+
+
+    .custom-list {
+      color: black;
+                list-style-type: none; 
+                padding: 0; 
+            }
+      
+            .custom-list li {
+                padding-top: 19px;
+            }
+      .custom-list li a {
+                text-decoration: none;
+                font-size: large; 
+                color: black;
+                transition: color 0.3s ease;
+            }
+      
+            .custom-list li a:hover {
+              color: gold; /* color on hover */
+          }
+      
+            
+.w3-third { text-align: center;
+  font-style: bold;}
+
   
   .new-custom-container {
-    position: relative;
-    overflow: hidden;
-    background-size: cover;
-    height: 100%; 
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  height: 100%; 
   }
   
   .new-container-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #B8705D;
-    z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #B8705D;
+  z-index: 1;
   }
   
   
   
   .new-flex-container {
-    position: relative;
-    z-index: 3;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
+  position: relative;
+  z-index: 3;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
   }
   
   
@@ -627,82 +515,16 @@ body {
   
   
   @media (max-width: 800px) {
-    .new-flex-container {
-      flex-direction: column;
-    }
+  .new-flex-container {
+    flex-direction: column;
   }
-  
-  
-  .custom-list {
-  
-    text-align: center;
-    list-style-type: none; /* Remove the default bullets */
-     /* Remove default padding */
   }
-  
-  .custom-list li {
-    padding: 10px;
-    text-align: center;
-    color: black; /* Make the list items black */
-  }
-  
-  .custom-list li a {
-    color: black; /* Make the link text black */
-    text-decoration: none; /* Remove underline from links */
-  }
-  
-  .azonto { text-align: center;
-  font-size: 23px;}
-  
-  .crew { text-align: center;
-  text-align: center;
-  align-items: center;
-  align-self: center;}
-  
-  
-  .w3-third { align-items: center;
-  justify-content: center;
-  text-align: center;}
-  
-  
-  .custom-list li a:hover {
-    color: gold; /* Change color to gold on hover */
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-
-
-
 
 
 
 .elephant-nav-list a {
   text-decoration: none;
   color: #000;
-  font-weight: bold;
   position: relative; /* Added position relative for hover effect */
 }
 
@@ -753,7 +575,6 @@ body {
 .elephant-nav-list a {
   text-decoration: none;
   color: #000;
-  font-weight: bold;
   line-height: 20px;
   position: relative; /* Added position relative for hover effect */
 }
@@ -891,30 +712,213 @@ body {
 
 
 
-
-
-
-
-      
-.custom-container {
-  box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
-  
-  z-index: 0;
-    position: relative;
-    overflow: hidden; 
-    background-image: url('https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/media/images/manatee-yumyum.gif'); 
-    background-size: cover; 
-    border-top: 35px; 
+@media screen and (max-width: 800px) {
+  .elephant-navbar img {
+    max-width: 175px;
+    padding: 0px;
+    padding-left: 0px;
+    margin: 0px;
+    max-height: 115px;
   }
-  
-  .container-overlay {
+}
+.elephant-nav-list a {
+  text-decoration: none;
+  color: #000;
+  position: relative; /* Added position relative for hover effect */
+}
+
+.elephant-nav-list a::after {
+  content: '';
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #D6A295;
-  opacity: 0.5;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: #Ab5943;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.elephant-nav-list a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+/* Add right spacing of 25px to the dropdown content */
+
+
+
+
+
+.elephant-navbar {
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 25px;
+  padding-left: 10px;
+  background-color: #fff;
+}
+.elephant-nav-list {
+  z-index: 999;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+}
+.elephant-nav-list li {
+  display: inline;
+}
+.elephant-nav-list a {
+  text-decoration: none;
+  color: #000;
+  line-height: 20px;
+  position: relative; /* Added position relative for hover effect */
+}
+.elephant-nav-list a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: #Ab5943;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+.elephant-nav-list a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
+}
+.elephant-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.elephant-dropdown-content {
+  width: 200px;
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 17px;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.elephant-dropdown-content a {
+  z-index: 3;
+  color: black;
+  padding: 10px 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.elephant-dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 800px) {
+ .elephant-menu-button {
+  
+    padding-right:0px;
+   }
+}
+
+
+.elephant-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 35px;
+  color: #Ab5943;
+  cursor: pointer;
+}
+@media (max-width: 800px) {
+  .elephant-nav-list {
+    z-index: 999;
+    display: none;
+    flex-direction: column;
+    width: auto;
+    position: absolute;
+    top: 60px; /* Adjust according to your navbar height */
+    right: 0;
+    background-color: #fff;
+    box-shadow: 0 8px 16px rgba(54, 36, 36, 0.2);
+    height: auto;
   }
-  
-  
+  .elephant-nav-list.show {
+    display: flex;
+  }
+  .elephant-menu-button {
+    display: block;
+    padding-right: 0px;
+  }
+}
+.elephant-navbar img {
+  max-width: 220px;
+  max-height: 130px;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+.elephant-dropdown:hover .elephant-dropbtn {
+  background-color: white;
+}
+.elephant-dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.elephant-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.elephant-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.elephant-dropdown-content a {
+  color: black;
+  z-index: 999;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.elephant-dropdown-content a:hover {
+  background-color: #AB5943;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+.elephant-dropdown:hover .elephant-dropbtn {
+  background-color: white;
+}
+/* Add right spacing of 25px to the dropdown content */
+.elephant-menu-content {
+  right: 25px;
+}
+
+
+
+
+@media screen and (max-width: 800px) {
+  .elephant-navbar img {
+    max-width: 175px;
+    padding: 0px;
+    padding-left: 0px;
+    margin: 0px;
+    max-height: 115px;
+  }
+}
+
+
