--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ font-size: 14px;
 
 z-index: 50;
 flex: 1; 
-padding: 35px 20px 20px 10px;
+padding: 0px 20px 20px 10px;
 box-sizing: border-box;
 }
 
@@ -318,6 +318,7 @@ box-sizing: border-box;
 
 
 .card {
+  
 width: 310px;
 height: 250px;
 box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
@@ -831,6 +832,26 @@ padding-bottom: 0px;
 
 
 
+
+
+
+
+
+
+
+.ruby {
+  width: 100%;
+  max-width: 330px;
+  height: 250px;
+  border-radius: 25px;
+}
+
+.play { padding-bottom: 25px;}
+
+.ruby-container {
+  display: flex;
+  justify-content: center;
+}
 
 
 
