--- a/styl.css
+++ b/styl.css
@@ -15,6 +15,34 @@ body {
 
 
 
+.messi{
+  margin-top: 35px;
+    width: 100%;
+    height: 400px;
+    background-image: url('grip.jpeg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 0;
+    transition: transform 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.messi::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(169, 169, 169, 0.5); /* light grey overlay */
+    z-index: 1;
+}
+
+
+
   
 
 
