--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
 color: black;
@@ -79,8 +81,8 @@ flex: 50%;
 @media (max-width: 800px) {
 .flex-container {
   
-  padding-left: 35px;
-  padding-right: 35px;
+  padding-left: 15px;
+  padding-right: 15px;
 
   justify-content: center;
   flex-direction: column;
@@ -285,6 +287,7 @@ box-sizing: border-box;
 }
 
 .right-panel {
+  padding: 20px;
      text-align: justify;
 font-weight: 400;
 font-size: 14px;
@@ -671,25 +674,27 @@ padding-bottom: 0px;
 
 
 
-
-
-
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
+ 
   .main-container {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
       display: flex;
       flex-direction: column;
       align-items: center;
   }
+ }
 
 
-  
-  .right-section, .left-section {
-      width: 100%;
-      margin-bottom: 25px;
-      margin-left: 0px;
+@media (max-width: 800px) {
+  .main-container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
   }
+  
   
   .right-section:last-child {
       margin-bottom: 0; /* Remove margin from the last element */
@@ -702,9 +707,10 @@ padding-bottom: 0px;
 
   display: flex;
   width: 100%;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
+
 .left-section,
 .right-section {
   width: 50%;
@@ -864,11 +870,8 @@ padding-bottom: 0px;
 
 
 
-.elephant-nav-list a {
-  text-decoration: none;
-  color: #000;
-  position: relative; /* Added position relative for hover effect */
-}
+
+
 
 .elephant-nav-list a::after {
   content: '';
