--- a/styl.css
+++ b/styl.css
@@ -24,10 +24,11 @@ body {
     background-position: center;
     position: relative;
     z-index: 0;
-    transition: transform 0.5s;
+    transition: transform 0.3s;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    opacity: 0.2px;
+    
+    overflow: hidden;
 }
 
 .messi::after {
@@ -39,6 +40,7 @@ body {
     height: 100%;
     background-color: rgba(169, 169, 169, 0.5); /* light grey overlay */
     z-index: 1;
+    overflow: hidden;
 }
 
 
@@ -252,42 +254,52 @@ body {
   }
 
   
-
-@media (max-width: 800px) {
-  .new-flex-container {
-    flex-direction: column;
-  }
-  }
   
   
-  .new-custom-container {
-  position: relative;
-  overflow: hidden;
-  background-size: cover;
-  height: 100%; 
-  }
-  
-  .new-container-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #B8705D;
-  z-index: 1;
-  }
-  
-  
-  
-  .new-flex-container {
-  position: relative;
-  z-index: 3;
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  }
-  
-  
+  @media (max-width: 800px) {
+    .new-flex-container {
+      flex-direction: column;
+    }
+    }
+    
+    
+    .new-custom-container {
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    height: 100%; 
+    }
+    
+    .new-container-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #B8705D;
+    z-index: 1;
+    }
+    
+    
+    
+    .new-flex-container {
+    position: relative;
+    z-index: 3;
+    display: flex;
+    flex-direction: row;
+    }
+    
+    
+    
+    
+    
+    
+    @media (max-width: 800px) {
+    .new-flex-container {
+      flex-direction: column;
+    }
+    }
+    
   
 
   .custom-list {
